feat: add smart wishlist rules
